# Data-Structures-and-Algorithm-in-Python

./: .gitignore  README.md  pyproject.toml
binary_tree/: binary_tree_operations.py
linked_list/: linked_list_operations.py  linked_list_oprations.py
queue/: queue_operations.py
stack/: stack_operations.py
