
[tool.poetry]
name = "data-structures-and-algorithm-in-python"
version = "0.1.0"
description = ""
authors = ["Ozkan Arapoglu"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
mypy = "^0.961"
pylint = "^2.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
